--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <main class="flex-row justify-space-between">
 
   </main>
-
+  <!--added script at bottom of body-->
+<script src="./assets/js/homepage.js"></script>
 </body>
 
 </html>
